--- a/index.html
+++ b/index.html
@@ -130,7 +130,8 @@
 										<span>11:30 AM</span>
 									</div>
 									<!-- <p>At <b>St. Vincent De Paul Church Edathotty, Kannur.</b> Followed by lunch at <b>Robin's Wedding Cafe, Edathotty.</b></p> -->
-									<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3903.673315773661!2d75.71257847590881!3d11.927808088299846!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ba5cd2b69442ebf%3A0x41b4e77a403a15b4!2sDe%20Paul%20Church%2C%20Edathotty!5e0!3m2!1sen!2sin!4v1696094112600!5m2!1sen!2sin" width="300" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+									<!-- <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3903.673315773661!2d75.71257847590881!3d11.927808088299846!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ba5cd2b69442ebf%3A0x41b4e77a403a15b4!2sDe%20Paul%20Church%2C%20Edathotty!5e0!3m2!1sen!2sin!4v1696094112600!5m2!1sen!2sin" width="300" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe> -->
+									<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d63010.97639479973!2d76.4838524333555!3d9.227652977589614!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b061bfbc543dbfd%3A0xd8334b8849fbd066!2sBethel%20Mar%20Thoma%20Church%2C%20Vathikulam!5e0!3m2!1sen!2sin!4v1709191419400!5m2!1sen!2sin" width="300" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 								</div>
 							</div>
 							<div class="col-md-6 col-sm-6 text-center">
@@ -143,11 +144,18 @@
 									<div class="event-col">
 
 										<i class="icon-clock"></i>
-										<span>11:00 PM</span>
+										<span>11:00 AM</span>
 									</div>
 									<!-- <p>At <b>St. Antony's Church Cheriyappilly, North Paravur.</b> Followed by lunch at <b>IMA Hall, North Paravur</b></p> -->
-						<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3927.690238117892!2d76.24293817588756!3d10.124421489987455!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b0810402ea732f5%3A0x7e23209bf83c2a9b!2sSt.Antony&#39;s%20Roman%20Catholic%20Church!5e0!3m2!1sen!2sin!4v1696094216568!5m2!1sen!2sin" width="300" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-								</div>
+						<!-- <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3927.690238117892!2d76.24293817588756!3d10.124421489987455!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b0810402ea732f5%3A0x7e23209bf83c2a9b!2sSt.Antony&#39;s%20Roman%20Catholic%20Church!5e0!3m2!1sen!2sin!4v1696094216568!5m2!1sen!2sin" width="300" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe> -->
+					<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3922.6229767409122!2d76.3349088!3d10.5303322!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ba7e4ee9e05676d%3A0x2ecefd2d48cbea4!2sSt.%20Mary&#39;s%20Jacobite%20Syrian%20Soonoro%20Church!5e0!3m2!1sen!2sin!4v1709191144424!5m2!1sen!2sin" width="300" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+						
+						<!-- <h1>Wedding</h1> -->
+					<!-- <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3922.6229767409122!2d76.3349088!3d10.5303322!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ba7e4ee9e05676d%3A0x2ecefd2d48cbea4!2sSt.%20Mary&#39;s%20Jacobite%20Syrian%20Soonoro%20Church!5e0!3m2!1sen!2sin!4v1709191144424!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe> -->
+					<!-- <h1>hall</h1>
+					<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3922.7950796490713!2d76.3232764!3d10.516800199999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ba7e4dbfde16bd3%3A0xbde6b367990a821a!2sGOLDEN%20JUBILEE%20PARISH%20HALL!5e0!3m2!1sen!2sin!4v1709191049279!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>			 -->
+					
+				</div>
 							</div>
 						</div>
 					</div>
