--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Baisel ❤️ Neethu - 04.04.2024</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="We are getting hitched - The dates are 21st & 29th of October '23 and we would like you to be a part of it." />
+	<meta name="description" content="We are getting hitched - The dates are 01st & 04th of April '24 and we would like you to be a part of it." />
 	<meta name="keywords" content="Baisel,Neethu,wedding,website,rsvp" />
 	<meta name="author" content="Baisel & Neethu" />
 
@@ -16,7 +16,7 @@
 	<meta property="og:image" content="images/og.jpg"/>
 	<meta property="og:site_name" content="Baisel ❤️ Neethu - 04.04.2024">
     <meta property="og:title" content="Baisel ❤️ Neethu - 04.04.2024">
-    <meta property="og:description" content="We are getting hitched - The dates are 21st & 29th of October '23 and we would like you to be a part of it.">
+    <meta property="og:description" content="We are getting hitched - The dates are 01st & 04th of April '24 and we would like you to be a part of it.">
 	<!-- Size of image. Any size up to 300. Anything above 300px will not work in WhatsApp -->
     <meta property="og:image:width" content="300">
     <meta property="og:image:height" content="300">
@@ -80,7 +80,7 @@
 		</div>
 	</nav>
 
-	<header id="fh5co-header" class="fh5co-cover" role="banner" style="background-image:url(images/bible2.jpg);" data-stellar-background-ratio="0.5">
+	<header id="fh5co-header" class="fh5co-cover" role="banner" style="background-image:url(images/bg.jpg);" data-stellar-background-ratio="0.5">
 		<div class="overlay"></div>
 		<div class="container">
 			<div class="row">
