--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta name="author" content="Baisel & Neethu" />
 
     <!-- Facebook and Twitter integration -->
-    <!-- <meta property="og:image" content="images/location.jpg"/> -->
+    <meta property="og:image" content="images/location.jpg"/>
     <meta property="og:site_name" content="Baisel ❤️ Neethu - 04.04.2024">
     <meta property="og:title" content="Baisel ❤️ Neethu - 04.04.2024">
     <meta property="og:description" content="We are getting hitched - The dates are 01st & 04th of April '24 and we would like you to be a part of it.">
@@ -23,7 +23,7 @@
     <!-- Website to visit when clicked in fb or WhatsApp-->
     <meta property="og:url" content="https://neethuannajose.github.io/BaiselWedsNeethu/">
     <meta property="og:type" content="website"/>
-    <meta property="og:image:type" content="image/jpeg">
+    <!-- <meta property="og:image:type" content="image/jpeg"> -->
 
 
     <link href='https://fonts.googleapis.com/css?family=Work+Sans:400,300,600,400italic,700' rel='stylesheet' type='text/css'>
